- v1.5.2-alpha - Update Java version to 24 - Cleanup files - LogViewer Legacy Report Section - New Report App Legacy Reports Support - Add Default Redesigned Reports Button - Option To Remove Custom Reports - LayoutBuilder Fixes And Changes - Added Custom Pull From Lookup Options For Each Field In CustomReports - Fix Bug With Vin Not Generating - Added Transfering To Any Custom Report
- TitleCase For Template FieldNames
- ANSI Console Coloring For Development

Signed-off-by: Guess1mMAC